--- a/global.css
+++ b/global.css
@@ -64,3 +64,9 @@ p {
 }
 
 /* ====Break points ends here====*/
+
+/* Gradiant for btn */
+/* background: linear-gradient(90deg, rgba(49,211,92,1) 30%, rgba(43,183,218,1) 100%); */
+
+/* Gradiant for icons */
+/* background: linear-gradient(167deg, rgba(49,211,92,1) 27%, rgba(49,211,92,1) 31%, rgba(43,183,218,1) 82%); */
